# snowmen

./: .clang-format  .gitmodules  CMakeLists.txt  fragment_shader.glsl  vertex_shader.glsl
include/glad/: glad.h
src/: gamestate.h  glad.c  main.c  utils.c  utils.h
